# GameOfLife

./: Board.cpp  Board.hpp  CMakeLists.txt  README.md  main.cpp
